<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BamftActivity!</string>

    <!-- TRUCK PROFILE PAGES -->

<<<<<<< HEAD
	<string name="schedule">Schedule</string>
	<string name="menu">Menu</string>
	<string name="twitter">Twitter</string>
	<string name="pictures">Pictures</string>
	<string name="yelp">Yelp</string>
	
	<!-- GOOGLE MAPS KEYS -->
	
	<string name="maps_key">0M7ZmQp2y_Eccf7uWqlRxTQYWnM3mpXYv-go0Bw</string> <!-- SUSANA'S KEY -->
	 <!-- <string name="maps_key">0Li57-t6yvUbeUsoBpSccbHJpCApOtnhrwWAgdQ</string>--><!-- JOSIAH'S KEY -->
	
	<!-- ACTION BAR -->
	<string name="app_name">BAMFT!</string>
    <string name="trivia">Did you know&#8230;?</string>
    
=======
    <string name="schedule">Schedule</string>
    <string name="menu">Menu</string>
    <string name="twitter">Twitter</string>
    <string name="pictures">Pictures</string>
    <string name="yelp">Yelp</string>

    <!-- GOOGLE MAPS KEYS -->


    <!-- <string name="maps_key">0M7ZmQp2y_Eccf7uWqlRxTQYWnM3mpXYv-go0Bw</string> ! --> <!-- SUSANA'S KEY -->
    <string name="maps_key">0Li57-t6yvUbeUsoBpSccbHJpCApOtnhrwWAgdQ</string> <!-- JOSIAH'S KEY -->


    <!-- ACTION BAR -->
    <string name="app_name">BAMFT!</string>
    <string name="trivia">Food Truck Trivia</string>
>>>>>>> f57293098b46d42e74edc3c9ceaf05352301f20f
    <string name="searchnearby">Search Nearby</string>
    <string name="listall">List All</string>
    <string name="mapview">Map View</string>
    <string name="surpriseme">Surprise Me!</string>
    <!-- END ACTION BAR -->

</resources>